[gd_scene load_steps=10 format=3 uid="uid://b4kftsjlj8bnl"]

[ext_resource type="Script" path="res://scripts/inu.gd" id="1_67l4g"]
[ext_resource type="PackedScene" uid="uid://bmtny5iilm1dd" path="res://scenes/inu_stats.tscn" id="2_clesr"]
[ext_resource type="Script" path="res://scripts/inu_controller.gd" id="3_e3e02"]
[ext_resource type="Texture2D" uid="uid://b4cnfxbc2jww5" path="res://sprites/DarkInuWalk.png" id="4_hnhy2"]
[ext_resource type="Texture2D" uid="uid://qphfs4b3tb56" path="res://sprites/DarkInuStanding.png" id="5_pbra0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vjiyr"]
atlas = ExtResource("4_hnhy2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sflfs"]
atlas = ExtResource("4_hnhy2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jcydp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjiyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sflfs")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ynpdj"]
size = Vector2(20.5148, 30.8432)

[node name="DarkInu" type="Node2D"]
script = ExtResource("1_67l4g")
metadata/inu_type = "dark_shiba_inu"

[node name="InuStats" parent="." instance=ExtResource("2_clesr")]
unique_name_in_owner = true

[node name="Controller" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
floor_max_angle = 0.0
script = ExtResource("3_e3e02")
metadata/inu_type = "base_shiba_inu"

[node name="ShibaSprite" type="AnimatedSprite2D" parent="Controller"]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_jcydp")
frame_progress = 0.616004

[node name="ShibaSpriteStationary" type="Sprite2D" parent="Controller"]
visible = false
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_pbra0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Controller"]
rotation = 1.5708
scale = Vector2(1.6, 1.3)
shape = SubResource("RectangleShape2D_ynpdj")

[connection signal="ready" from="." to="." method="_on_ready"]
